syntax = "proto3";

package j5.source.v1;

import "google/protobuf/descriptor.proto";
import "j5/schema/v1/schema.proto";
import "j5/source/v1/annotations.proto";

option go_package = "github.com/pentops/j5/gen/j5/source/v1/source_j5pb";

message SourceFile {
  string path = 1;
  string package = 2 [(j5.source.v1.field).assign = {}];
  string version = 3;

  repeated j5.schema.v1.RootSchema schemas = 4;

  repeated Entity entities = 5;
}

message Entity {
  string name = 1;
  string description = 2;

  j5.schema.v1.Object keys = 3;
  j5.schema.v1.Enum status = 4;
  j5.schema.v1.Object data = 5;
  j5.schema.v1.Oneof events = 6;
}
